# zalupa

./: .gitlab-ci.yml  .travis.yml
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeCache.txt  CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt
